--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "json-server": "json-server database.json",
-    "browser-sync": "browser-sync start --proxy localhost:3000 --files \"**/*.ts, **/*.html\"",
+    "browser-sync": "node server.js",
     "install-globals": "npm install -g jspm@beta && npm install -g json-server@0.7.18",
     "start": "npm run json-server & npm run browser-sync",
     "jspm-install": "jspm install",
@@ -23,5 +23,8 @@
     "devDependencies": {
       "typescript": "github:mhegazy/typescript@v1.5-beta2"
     }
+  },
+  "dependencies": {
+    "browser-sync": "^2.7.12"
   }
 }
