--- a/package.json
+++ b/package.json
@@ -1,31 +1,34 @@
 {
-  "scripts": {
-    "json-server": "json-server database.json",
-    "browser-sync": "node dev-server.js",
-    "install-globals": "npm install -g jspm@beta && npm install -g json-server@0.7.18",
-    "start": "npm run json-server & npm run browser-sync",
-    "jspm-install": "jspm install",
-    "jspm-bundle": "jspm bundle angular2/angular2 public/dist/angular2.js",
-    "postinstall": "npm run install-globals && npm run jspm-install && npm run jspm-bundle"
-  },
-  "jspm": {
-    "directories": {
-      "baseURL": "public"
+    "scripts": {
+        "json-server": "node_modules/.bin/json-server database.json",
+        "browser-sync": "node dev-server.js",
+        "start": "npm run json-server & npm run browser-sync",
+        "jspm-install": "node_modules/.bin/jspm install",
+        "jspm-bundle": "node_modules/.bin/jspm bundle angular2/angular2 public/dist/angular2.js",
+        "postinstall": "npm run jspm-install && npm run jspm-bundle"
+    },
+    "jspm": {
+        "directories": {
+            "baseURL": "public"
+        },
+        "dependencies": {
+            "angular2": "npm:angular2@^2.0.0-alpha.27",
+            "bootstrap": "github:twbs/bootstrap@^3.3.5",
+            "css": "github:systemjs/plugin-css@^0.1.12",
+            "es6-shim": "github:es-shims/es6-shim@^0.32.2",
+            "reflect-metadata": "npm:reflect-metadata@^0.1.0",
+            "zone.js": "npm:zone.js@^0.5.1"
+        },
+        "devDependencies": {
+            "typescript": "github:mhegazy/typescript@v1.5-beta2"
+        }
     },
     "dependencies": {
-      "angular2": "npm:angular2@^2.0.0-alpha.27",
-      "bootstrap": "github:twbs/bootstrap@^3.3.5",
-      "css": "github:systemjs/plugin-css@^0.1.12",
-      "es6-shim": "github:es-shims/es6-shim@^0.32.2",
-      "reflect-metadata": "npm:reflect-metadata@^0.1.0",
-      "zone.js": "npm:zone.js@^0.5.1"
+        "browser-sync": "^2.7.12",
+        "connect-history-api-fallback": "^1.1.0"
     },
     "devDependencies": {
-      "typescript": "github:mhegazy/typescript@v1.5-beta2"
+        "json-server": "^0.7.18",
+        "jspm": "^0.16.0-beta.7"
     }
-  },
-  "dependencies": {
-    "browser-sync": "^2.7.12",
-    "connect-history-api-fallback": "^1.1.0"
-  }
 }
